--- a/compute/gpu/how-to/use-gpu-with-docker.mdx
+++ b/compute/gpu/how-to/use-gpu-with-docker.mdx
@@ -6,16 +6,19 @@ content:
   h1: How to access the GPU using Docker
   paragraph: This page explains how to access the GPU using Docker
 dates:
-  validation: 2021-12-14
-  posted: 2021-12-14
+  validation: 2022-03-25
+  posted: 2022-03-25
 ---
 
 Docker is a platform as a service (PaaS) tool, that uses OS-level virtualization to deliver software in packages called containers.
 Each container is isolated from the others and each of them bundles their own software, libraries, and configuration files. Unlike virtual machines, containers share the services of a single operating system kernel. This reduces unnecessary overhead and makes them lightweight and portable.
 Docker containers can run on any computer running macOS, Windows, or Linux, either on-premises or in a public cloud environment, such as Scaleway Elements.
 
-All [Scaleway GPU Instances](https://www.scaleway.com/en/gpu-instances/) come with prebuilt AI Docker images, using an environment based on Pipenv. 
-As mentioned earlier, Docker images are portable and you can also run images provided by other sources and use them with the GPU (for instance Docker images from Nvidia, Google, etc.).
+Using a Docker image for your AI project allows you to create and deploy an isolated environment for your project, which can be easily transferred between machines.
+
+All [Scaleway GPU Instances](https://www.scaleway.com/en/gpu-instances/) come with prebuilt AI Docker images, using an environment based on Anaconda or Pipenv (depending on the GPU OS image).
+
+As mentioned earlier, Docker images are portable and you can also run images provided by other sources and use them with the GPU (for instance Docker images from Nvidia, Google, etc.). You could also choose to build your own Docker images.
 
 <Message type="requirement">
 
@@ -27,69 +30,74 @@ As mentioned earlier, Docker images are portable and you can also run images pro
 
 ## How to get started on a GPU Instance with Docker
 
-1. [Connect](/compute/instances/how-to/connect-to-instance/) to your instance via SSH.
-2. Choose a Docker container from the containers shipped with your GPU Instance. [More information](LINK) about the available Docker containers.
+1. [Connect](/compute/instances/how-to/connect-to-instance/) to your Instance via SSH.
+
+2. Choose a Docker image from the containers shipped with your GPU Instance. See our [reference content](/compute/gpu/reference-content/docker-images/) for more information about the available Docker images, including the specific commands to run each of them.
+
 3. Use the following command to pull/run the Docker container:
+
   ```
-  docker pull <insert command here>
+  docker run --rm -it [OPTIONS] <IMAGE_NAME:TAG> [COMMAND]
   ```
+  <Message type="tip">
 
-<Message type="tip">
+  If you created your GPU Instance with the Ubuntu Focal GPU OS11 Operating System image, refer to the [pipenv documentation](/compute/gpu/how-to/use-pipenv/) for how to use the pipenv virtual environment inside the container.
 
-Refer to the [pipenv documentation](/compute/gpu/how-to/use-pipenv/) for how to use the pipenv virtual environment inside the container.
-
-</Message>
+  </Message>
 
 ## How to map volumes
 
-It is recommended to map volumes into your Docker containers. You can either map local volumes on your Instance or add Block Storage volumes to your Instance for increased data redundancy.
+We recommend that you map volumes from your GPU Instance to your Docker containers, so that your work is not lost when you exit the Docker container. For increased data redundancy, we also recommend that the directories you map to your Docker containers are stored on [Block Storage](/storage/block/quickstart/), for increased data redundancy. 
 
 ### How to map local volumes
 
-You can map Local Storage of your GPU Instance into your container using the `-v <local_storage>:<container_mountpoint>` flag. Following an example how to map the directory `/root/mydata` into the directory `/workspace` in the container: 
+You can map directories from your GPU Instance's local storage, to your Docker container, using the `-v <local_storage>:<container_mountpoint>` flag. See the example command below:
 
 ```
-docker run --runtime=nvidia -it --name resnet_P100 -p 8888:8888 -p 6006:6006 -v /root/mydata/:/workspace nvcr.io/nvidia/tensorflow:20.11-tf2-py3 /bin/bash
+docker run -it --rm -v /root/mydata/:/workspace nvidia/cuda:11.2.1-runtime-ubuntu20.04
+
+# use the `exit` command for exiting this docker container
 ```
+
+In the above example, everything in the `/root/mydata` directory on the Instance will be available in the Docker container, in a directory called `/workspace`. Everything then created, deleted or modified in the `/workspace` directory will be mapped back to `/root/mydata` on the Instance, and remain there after the container is exited.
 
 ### How to map Block Storage volumes 
 
-It is also possible to map [Block Storage](https://www.scaleway.com/en/block-storage/) volumes into your containers. Block Storage is fully backed by SSDs for both classes. These three-time replacted, high-speed drives allow up to 5,000 IOPS. 
-Once [attached](/storage/block/how-to/attach-a-volume/) and [mounted](/storage/block/how-to/mount-and-use-volume/) in the host OS of the GPU Instance, you can map the volume like a local volume. 
+You can also map [Block Storage](https://www.scaleway.com/en/block-storage/) volumes into your containers. Block Storage is fully backed by SSDs. These three-time replacted, high-speed drives allow up to 5,000 IOPS. Once [attached](/storage/block/how-to/attach-a-volume/) and [mounted](/storage/block/how-to/mount-and-use-volume/) in the host OS of the GPU Instance, you can map the volume like a local volume, as we did above.
 
 <Message type="tip">
 
-[Block Storage](/storage/block/quickstart/) volumes are independent from your GPU instance and provide three-time replicated storage. It is recommended to use Block Storage for storing your datasets, training logs, model source code, etc...
+[Block Storage](/storage/block/quickstart/) volumes are independent from your GPU instance and provide three-time replicated storage. It is recommended to use Block Storage for storing your datasets, training logs, model source code, etc.
 
 </Message>
 
 ## Most common Docker commands 
 
-Below you find a list of the most common commands you use when dealing with Docker containers:
+Below is a list of the most common commands you use when dealing with Docker containers:
 
 | Command       | Usage                                                        | Description                                                                                                                                              |
 |---------------|--------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------|
-| docker login  | `docker login`                                               | This command is used to login to Docker's default repository (Docker Hub)                                                                                |
-| docker pull   | `docker pull <docker_image>`                                 | This command is used to pull images from the Docker Hub.                                                                                                 |
-| docker run    | `docker run -it -d <docker_image>`                           | This command is used to create a container from an image.                                                                                                |
-| docker ps     | `docker ps`                                                  | This command is used to list all running containers.                                                                                                     |
-| docker ps     | `docker ps -a`                                               | This command is used to display all running and exited containers.                                                                                       |
+| **docker login**  | `docker login <private-registry-url>`                         | This command is used to login to Docker's default repository (Docker Hub) or any other private Docker reigstry                              |
+| **docker pull**  | `docker pull <docker_image>`                                 | This command is used to pull images from the Docker Hub.                                                                                                 |
+| **docker run**    | `docker run -it -d <docker_image>`                           | This command is used to create and execute a container from an image.                                                                                                |
+| **docker ps**     | `docker ps`                                                  | This command is used to list all running containers.                                                                                                     |
+| **docker ps**     | `docker ps -a`                                               | This command is used to display all running and exited containers.                                                                                       |
 | docker exec   | `docker exec -it <container_id> bash`                        | This command is used to access the `bash` command prompt on a running container with the ID `<container_id>`.                                            |
 | docker stop   | `docker stop <container_id>`                                 | This command is used to stop a running container with the ID `<container_id>`. This command allows the container to shut down gracefully.                |
 | docker kill   | `docker kill <container_id>`                                 | This command is used to "kill" a running container with the ID `<container_id>`. This commands ends the ends the execution of the container immediately. |
 | docker build  | `docker build <path_to_Dockerfile>`                          | This command is used to build a new image from a specified Dockerfile.                                                                                   |
 | docker commit | `docker commit <conatainer_id> <registry_user/docker_image>` | This command is used to create a new local image of an edited container.                                                                                 |
-| docker push   | `docker push <registry_user/docker_image>`                   | This command is used to push a local image to a remote repository.                                                                                       |
-| docker images | `docker images`                                              | This command is used to list all available docker images on the local system.                                                                            |
-| docker rm     | `docker rm <container_id>`                                   | This command is used to remove a stopped container from the local system.                                                                                |
-| docker rmi    | `docker rmi <image_id>`                                      | This command is used to delete an image from the local storage.                                                                                          |
+| **docker push**   | `docker push <registry_user/docker_image>`                   | This command is used to push a local image to a remote repository.                                                                                       |
+| **docker images** | `docker images`                                              | This command is used to list all available docker images on the local system.                                                                            |
+| **docker rm**     | `docker rm <container_id>`                                   | This command is used to remove a stopped container from the local system.                                                                                |
+| **docker rmi**    | `docker rmi <image_id>`                                      | This command is used to delete an image from the local storage.                                                                                          |
 | docker version| `docker --version`                                           | This command is used to display information about the currently installed version of Docker.                                                             |
 
 For more information regarding the `docker run` command, refer to the [official documentation](https://docs.docker.com/engine/reference/run/).
 
 ## How to map ports using Docker
 
-The default behavior of Docker when running a container using `docker run`, is not publish any internal ports of the container to the outside world. To access services on a container outside of Docker, you have to map the containers internal ports using the `--publish` or `-p` flag.
+The default behavior of Docker when running a container using `docker run`, is to not publish any internal ports of the container to the outside world. To access services on a container outside of Docker, you have to map the containers internal ports using the `--publish` or `-p` flag.
 
 | Flag value                      | Description                                                                                                                                                |
 |---------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------|
@@ -101,17 +109,31 @@ The default behavior of Docker when running a container using `docker run`, is n
 
 ## How to access the GPU from the inside of a Docker container
 
-You can access the GPU of your Instance from the inside of a Docker container using the `nvidia-docker` tool. 
-GPUs can be specified to the Docker CLI using either the `--gpus` option (starting with Docker 19.03) or using the environment variable `NVIDIA_VISIBLE_DEVICES`, which controls which GPUs will be made accessible inside the container.
+You can access the GPU of your Instance from the inside of a Docker container thanks to the preinstalled `nvidia-docker` tool. 
+
+With a 'vanilla' Docker setup, in order to use the GPU inside your container, you need to manually specify the *nvidia runtime* when launching a Docker container, as in the following example:
+
+```
+docker run --runtime=nvidia -it --rm nvidia/cuda:11.2.1-runtime-ubuntu20.04 nvidia-smi
+```
+
+<Message type="tip">
+
+You can omit this option if using the “Ubuntu Focal GPU OS11” Operating System image with your GPU Instance (as this option is set by default in the Docker configuration files)
+
+</Message>
+
+If your Instance has several GPUs, you can specify which GPU(s) to use with the container via the Docker CLI using either the `--gpus` option (starting with Docker 19.03) or using the environment variable `NVIDIA_VISIBLE_DEVICES`.
+
 
 The possible values of the `NVIDIA_VISIBLE_DEVICES` variable are:
 
 | Possible values                | Description                                                                                                   |
 |--------------------------------|---------------------------------------------------------------------------------------------------------------|
-| `0`,`1`,`2`, or `GPU-fef8089b` | a comma-separated list of GPU UUID(s) or index(es).                                                           |
-| `all`                          | all GPUs will be accessible, this is the default value in base CUDA container images.                         |
-| `none`                         | no GPU will be accessible, but driver capabilities will be enabled.                                           |
-| `void or empty or unset`       | nvidia-container-runtime will have the same behavior as runc (i.e. neither GPUs nor capabilities are exposed). |
+| `0`,`1`,`2`, (or `GPU-UUID`)   | a comma-separated list of GPU UUID(s) or index(es).                                                           |
+| `all`                          | all GPUs will be accessible. This is the default value.                         |
+| `none`                         | no GPUs will be accessible, but driver capabilities will be enabled.                                           |
+| `void or empty or unset`       | nvidia-container-runtime will have the same behavior as run (i.e. neither GPUs nor capabilities are exposed). |
 
 <Message type="note">
 
@@ -125,12 +147,12 @@ When using the `NVIDIA_VISIBLE_DEVICES` variable, you may need to set `--runtime
 
 * Starting a GPU enabled CUDA container (using `--gpus`)
   ```sh
-  docker run --rm --gpus all nvidia/cuda nvidia-smi
+  docker run --runtime=nvidia -it --rm --gpus all nvidia/cuda:11.2.1-runtime-ubuntu20.04 nvidia-smi
   ```
 
 * Starting a GPU enabled container using `NVIDIA_VISIBLE_DEVICES` and specify the nvidia runtime
   ```
-  docker run --rm --runtime=nvidia -e NVIDIA_VISIBLE_DEVICES=all nvidia/cuda nvidia-smi
+  docker run --runtime=nvidia -it --rm --e NVIDIA_VISIBLE_DEVICES=all nvidia/cuda:11.2.1-runtime-ubuntu20.04 nvidia-smi
   ```
 
 * Starting a GPU enabled [Tensorflow](https://www.tensorflow.org/) container with a Jupyter notebook using `NVIDIA_VISIBLE_DEVICES` and map the port `88888` to access the web GUI: 
@@ -138,24 +160,24 @@ When using the `NVIDIA_VISIBLE_DEVICES` variable, you may need to set `--runtime
   docker run --runtime=nvidia -e NVIDIA_VISIBLE_DEVICES=all -it --rm -p 8888:8888 tensorflow/tensorflow:latest-gpu-jupyter
   ```
 
-* Query the GPU UUID using nvidia-smi and then specify that to the container
+* Query the GPU UUID of the first GPU using nvidia-smi and then specifying that to the container:
   ```
-  nvidia-smi -i 3 --query-gpu=uuid --format=csv
+  nvidia-smi -i 0 --query-gpu=uuid --format=csv
   uuid
   GPU-18a3e86f-4c0e-cd9f-59c3-55488c4b0c24
 
-  docker run --gpus device=GPU-18a3e86f-4c0e-cd9f-59c3-55488c4b0c24 nvidia/cuda nvidia-smi
+  docker run -it --rm --gpus device=GPU-b40b736a-9a07-9cf6-d9da-ed22a1ae16c5 nvidia/cuda:11.2.1-runtime-ubuntu20.04 nvidia-smi
   ```
 
 ## How to push and list Docker images stored on a Scaleway Registry
 
 <Message type="tip">
 
-GPU Instances are compatible with [Scaleway Container Registry](https://www.scaleway.com/en/docs/compute/container-registry/quickstart/). You can use this registry to store and pull your own docker Images.
+GPU Instances are compatible with [Scaleway Container Registry](https://www.scaleway.com/en/docs/compute/container-registry/quickstart/). You can use this registry to store and pull your own Docker images.
 
 </Message>
 
-See [detailed information](https://www.scaleway.com/en/docs/compute/container-registry/how-to/pull-images/) on how to pull custom Docker Images on your GPU instance.
+See [detailed information](https://www.scaleway.com/en/docs/compute/container-registry/how-to/pull-images/) on how to pull your own custom Docker images on your GPU instance.
 
 <Navigation title="See Also">
   <PreviousButton to="/compute/gpu/how-to/create-manage-gpu-instance/">How to create and manage a GPU Instance</PreviousButton>
