--- a/compute/gpu/how-to/use-preinstalled-env.mdx
+++ b/compute/gpu/how-to/use-preinstalled-env.mdx
@@ -6,11 +6,11 @@ content:
   h1: How to use the preinstalled environment
   paragraph: This page explains how to use the preinstalled environment
 dates:
-  validation: 2021-12-14
-  posted: 2021-12-14
+  validation: 2022-03-25
+  posted: 2022-03-25
 ---
 
-Once you've launched one of our ready-made [Docker images](/compute/gpu/how-to/use-gpu-with-docker) on your Scaleway GPU Instance, you have access to a pre-installed Python environment. A number of useful AI core packages and tools are installed, including scipy, numpy, scikit-learn, jupyter, tensorflow and the Scaleway SDK. Depending on the Docker image you choose, other packages and tools will also be pre-installed, providing a convenient framework environment for you so that you can begin work immediately. For the full list of Scaleway's AI Docker images and their pre-installations, see [TODO INSERT LINK](link).
+Once you've [launched](/compute/gpu/how-to/use-gpu-with-docker) one of our ready-made [Docker images](/compute/gpu/reference-content/docker-images) on your Scaleway GPU Instance, you have access to a pre-installed Python environment. A number of useful AI core packages and tools are installed, including scipy, numpy, scikit-learn, jupyter, tensorflow and the Scaleway SDK. Depending on the Docker image you choose, other packages and tools will also be pre-installed, providing a convenient framework environment for you so that you can begin work immediately.
 
 <Message type="requirement">
 
@@ -43,8 +43,6 @@ You can view packages, install/uninstall packages and update packages with a few
 
   `pip list`
 
-  At first, your newly-created environment will have nothing in it. You will need to install some packages.
-
 2. Enter the following command to install a new package:
 
   `pip install <package>`
@@ -59,13 +57,13 @@ You can view packages, install/uninstall packages and update packages with a few
 
     <Message type="tip">
 
-    To avoid losing any changes to your environment (or the data stored within it) upon exiting the container, you can [map the ai directoryto one of your GPU Instance's local volumes when launching the container](/compute/gpu/how-to/use-gpu-with-docker#how-to-map-local-volumes)
+    To avoid losing any changes to your environment (or the data stored within it) upon exiting the container, you can [map the ai directoryto one of your GPU Instance's local volumes when launching the container](/compute/gpu/how-to/use-gpu-with-docker#how-to-map-volumes)
 
     </Message>
 
 ## Launching an application in your local browser
 
-Some applications, such as [Jupyter Lab](https://jupyter.org/) or [Code Server](https://code-server.dev/), require a browser to run. You can launch these from the `ai` environment of your Docker container, and view them in the browser of your local machine. This is thanks to the port mapping we specified when we ran the Docker container.
+Some applications, such as [Jupyter Lab](https://jupyter.org/) or [Code Server](https://code-server.dev/), require a browser to run. You can launch these from the `ai` environment of your Docker container, and view them in the browser of your local machine. This is thanks to the port mapping we specified when we ran the Docker container (the `-p 8888:8888 -p 6006:6006` arguments of the `docker run` command).
 
 1. Launch an application. Here, we launch Jupyter Lab:
 
@@ -84,6 +82,12 @@ Some applications, such as [Jupyter Lab](https://jupyter.org/) or [Code Server](
   ```
   <ip-address>:8888/lab?token=<my-token>
   ```
+
+  <Message type="tip">
+
+  You can find the IP address of your Instance in the Scaleway console. In the side menu, click **Instances** to see a list of your Instances. The IP address of each of them is shown in the list that displays.
+
+  </Message>
 
   Jupyter Lab now displays in your browser. You can use the Notebook, Console, or other features as required:
 
